# boggle

./: Building.md  DistributionThoughts.md  Makefile  ProjectHome.md  QtBoggle_de.ts  boggle.pro  dicetray.cpp  lexicon.cpp  lexicon.h  main.cpp  mainwindow.cpp  mainwindow.h
C#/Boggle/: Die.cs
csharp/Boggle/: DiceTray.cs  Die.cs  Lexicon.cs  Program.cs  Window.Designer.cs  Window.cs
csharp/Boggle/Properties/: Resources.Designer.cs  Settings.Designer.cs
java/: build-before-profiler.xml
java/nbproject/: project.xml
java/src/game/: DiceTray.java  Die.java  Lexicon.java
java/src/ui/: Messages.java  Score.java  Window.java
resources/: dictionary.txt
sources/: dicetray.cpp  dicetray.h  die.cpp  die.h  lexicon.cpp  lexicon.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
translations/: de.ts
trunk/: CMakeLists.txt  QtBoggle.pro  QtBoggle_de.ts  Resources.qrc  boggle.pro  boggle.ui  die.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  wordsearchthread.cpp  wordsearchthread.h
trunk/C#/Boggle/Properties/: AssemblyInfo.cs  Settings.Designer.cs
trunk/boggle.app/Contents/: Info.plist
trunk/boggle.app/Contents/MacOS/: boggle
trunk/csharp/: Boggle.sln
trunk/csharp/Boggle/: Boggle.csproj  Lexicon.cs  Program.cs
trunk/csharp/Boggle/Properties/: AssemblyInfo.cs
trunk/java/: build.xml
trunk/java/nbproject/: build-impl.xml  genfiles.properties  project.properties
trunk/java/nbproject/private/: private.properties
trunk/java/src/game/: Die.java  Lexicon.java  Score.java
trunk/java/src/ui/: Main.java  Score.java  Window.java
trunk/resources/: files.qrc
trunk/sources/: dicetray.cpp  dicetray.h  die.cpp  die.h  lexicon.cpp  lexicon.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
trunk/translations/: de.qm  de.ts
wiki/: Building.wiki  DistributionThoughts.wiki
